# cool.ng

./: CMakeLists.txt  Component.cmake  cool.ng.dox.in  mainpage.dox
cmake/: cool.ng-doc.cmake  cool.ng-files.cmake  cool.ng-library.cmake  cool.ng-platform.cmake  cool.ng-test.cmake
doc/: cool.ng.dox.in
doc/api/: mainpage.dox  module-async.dox  module-errh.dox  module-ip.dox  module-util.dox
include/cool/ng/: async.h  bases.h  binary.h  error.h  exception.h  ip_address.h  task.h  traits.h
include/cool/ng/async/: event_sources.h  runner.h  task.h
include/cool/ng/async/net/: server.h  stream.h
include/cool/ng/impl/: binary.h  ip_address.h  platform.h  task_traits.h
include/cool/ng/impl/async/: conditional_impl.h  context.h  event_sources.h  event_sources_types.h  intercept_impl.h  loop_impl.h  net_server.h  net_stream.h  net_types.h  repeat_impl.h  sequential_impl.h  simple_impl.h  task.h  task_traits.h
lib/include/lib/async/: executor.h
lib/src/: bases.cpp  binary.cpp  error.cpp  exception.cpp  ip_address.cpp
lib/src/async/: event_sources.cpp  runner.cpp
lib/src/async/gcd/: event_sources.cpp  event_sources.h  executor.cpp  executor.h
lib/src/async/run_queue/deque/: run_queue.cpp  run_queue.h
lib/src/async/run_queue/gcd/: run_queue.cpp  run_queue.h
lib/src/async/run_queue/wincp/: critical_section.h  run_queue.cpp  run_queue.h
lib/src/async/wincp/: event_sources.cpp  event_sources.h  executor.cpp  executor.h
tests/unit/: unit_test_common.h
tests/unit/error/: error.cpp
tests/unit/event_sources/: aa  es_reader.cpp  es_timer.cpp  test_server.cpp  test_server.h
tests/unit/executor/: executor.cpp
tests/unit/net/: ip_address.cpp
tests/unit/run_queue/: run_queue.cpp
tests/unit/task/: conditional_task.cpp  intercept_task.cpp  loop_task.cpp  repeat_task.cpp  sequential_task.cpp  simple_task.cpp  task-context.cpp  task_common.cpp  task_common.h
tests/unit/traits/: task_traits.cpp  traits.cpp
tests/unit/utilities/: binary.cpp  identification.cpp
